# CPP-SimpleBegginerExamples

./: CMakeCache.txt  CMakeLists.txt  CPP_Beginner  CPP_SimpleBeginnerExamples.cbp  Example.cpp  Example.h  Makefile  Person.cpp  Person.h  README.md  ReferenceTypes.cpp  ReferenceTypes.h  cmake_install.cmake  main.cpp  mainMemoryManagement.cpp  mainReferenceTypes.cpp
BasicDataTypes/: BasicDataTypes.cpp  BasicDataTypes.h
MemoryManagement/: MemoryManagement.cpp  MemoryManagement.h
ProcessingFiles/: ProcessingFiles.cpp  ProcessingFiles.h
ReferenceTypes/: ReferenceTypes.cpp  ReferenceTypes.h
StreamsIO/: StreamIO.cpp  StreamIO.h
